; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_items_clear.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_items_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.discovery_sys = type { i32 }
%struct.item = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.discovery_sys*)* @items_clear to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @items_clear(%struct.discovery_sys* %0) #0 {
  %2 = alloca %struct.discovery_sys*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.item*, align 8
  store %struct.discovery_sys* %0, %struct.discovery_sys** %2, align 8
  store i64 0, i64* %3, align 8
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i64, i64* %3, align 8
  %7 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %8 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %7, i32 0, i32 0
  %9 = call i64 @vlc_array_count(i32* %8)
  %10 = icmp ult i64 %6, %9
  br i1 %10, label %11, label %22

11:                                               ; preds = %5
  %12 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %13 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %12, i32 0, i32 0
  %14 = load i64, i64* %3, align 8
  %15 = call %struct.item* @vlc_array_item_at_index(i32* %13, i64 %14)
  store %struct.item* %15, %struct.item** %4, align 8
  %16 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %17 = load %struct.item*, %struct.item** %4, align 8
  %18 = call i32 @items_release(%struct.discovery_sys* %16, %struct.item* %17)
  br label %19

19:                                               ; preds = %11
  %20 = load i64, i64* %3, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %3, align 8
  br label %5

22:                                               ; preds = %5
  %23 = load %struct.discovery_sys*, %struct.discovery_sys** %2, align 8
  %24 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %23, i32 0, i32 0
  %25 = call i32 @vlc_array_clear(i32* %24)
  ret void
}

declare dso_local i64 @vlc_array_count(i32*) #1

declare dso_local %struct.item* @vlc_array_item_at_index(i32*, i64) #1

declare dso_local i32 @items_release(%struct.discovery_sys*, %struct.item*) #1

declare dso_local i32 @vlc_array_clear(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
